Added Lens Driver Tab and its Functionality

--- a/dct_widgets/lensdriverbox/lensdriverbox.ui
+++ b/dct_widgets/lensdriverbox/lensdriverbox.ui
@@ -23,15 +23,49 @@
       <string>Lens Select</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QComboBox" name="cbxLensProfile"/>
+      <item row="0" column="2">
+       <widget class="QLabel" name="lblLensActivated">
+        <property name="text">
+         <string>Activated</string>
+        </property>
+       </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="0">
        <widget class="QCheckBox" name="cbxEnableAdvancedSettings">
         <property name="text">
          <string>Enable Advanced Lens Setup</string>
         </property>
        </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="btnActivateLens">
+        <property name="text">
+         <string>Activate Lens</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QComboBox" name="cbxLensProfile"/>
+      </item>
+      <item row="0" column="3">
+       <widget class="QLabel" name="lblLensNotActivated">
+        <property name="text">
+         <string>not Activated</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="4">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </widget>
