Added minimum to temperature target in info box

--- a/dct_widgets/infobox/infobox.ui
+++ b/dct_widgets/infobox/infobox.ui
@@ -847,6 +847,9 @@
         <property name="suffix">
          <string> °C</string>
         </property>
+        <property name="minimum">
+         <number>30</number>
+        </property>
         <property name="maximum">
          <number>75</number>
         </property>
