--- a/dct_widgets/inoutbox/inoutbox.ui
+++ b/dct_widgets/inoutbox/inoutbox.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>722</width>
-    <height>1006</height>
+    <height>1046</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -67,7 +67,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Aperture (%)</string>
+         <string>Aperture</string>
         </property>
        </widget>
       </item>
@@ -91,6 +91,9 @@
           <width>120</width>
           <height>16777215</height>
          </size>
+        </property>
+        <property name="suffix">
+         <string> %</string>
         </property>
        </widget>
       </item>
@@ -227,6 +230,9 @@
         </property>
         <property name="alignment">
          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+        <property name="suffix">
+         <string/>
         </property>
        </widget>
       </item>
@@ -665,27 +671,60 @@
       <string>Output Configuration</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="1" column="0">
-       <widget class="QLabel" name="lblVideoMode">
+      <item row="4" column="4">
+       <widget class="QComboBox" name="cbxSdi2Downscaler">
+        <property name="minimumSize">
+         <size>
+          <width>170</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="5">
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>0</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="2">
+       <spacer name="horizontalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Expanding</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>0</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="7" column="0">
+       <widget class="QLabel" name="lblLogMode">
         <property name="minimumSize">
          <size>
           <width>140</width>
           <height>0</height>
          </size>
         </property>
-        <property name="maximumSize">
-         <size>
-          <width>140</width>
-          <height>16777215</height>
-         </size>
-        </property>
         <property name="text">
-         <string>Video Mode</string>
+         <string>HDR / LOG Gamma</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
-       <widget class="QComboBox" name="cbxFlipMode">
+      <item row="1" column="1">
+       <widget class="QComboBox" name="cbxVideoMode">
         <property name="minimumSize">
          <size>
           <width>170</width>
@@ -700,22 +739,49 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="lblFlipMode">
+      <item row="10" column="0">
+       <widget class="QLabel" name="lblColorSpace">
         <property name="minimumSize">
          <size>
           <width>140</width>
           <height>0</height>
          </size>
         </property>
-        <property name="maximumSize">
+        <property name="text">
+         <string>Color Space / Gamut</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="3">
+       <widget class="QLabel" name="lblSdi2Downscaler">
+        <property name="text">
+         <string>SDI 2 Downscaler</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="4">
+       <widget class="QCheckBox" name="cbxAudioEnable">
+        <property name="minimumSize">
          <size>
-          <width>140</width>
-          <height>16777215</height>
+          <width>170</width>
+          <height>0</height>
          </size>
         </property>
+        <property name="toolTip">
+         <string>Enable to embed audio from the internal microphine in the SDI signal</string>
+        </property>
         <property name="text">
-         <string>Flip</string>
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="1">
+       <widget class="QComboBox" name="cbxColorSpace">
+        <property name="minimumSize">
+         <size>
+          <width>170</width>
+          <height>0</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -735,8 +801,44 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="cbxVideoMode">
+      <item row="7" column="1">
+       <widget class="QComboBox" name="cbxLogMode">
+        <property name="minimumSize">
+         <size>
+          <width>170</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="3">
+       <widget class="QLabel" name="lblAudioEnable">
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>Audio</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="4">
+       <widget class="QComboBox" name="cbxSdi1Downscaler">
+        <property name="minimumSize">
+         <size>
+          <width>170</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Use &quot;Downscale&quot; to convert e.g. 2160p50 to 1080p50, use &quot;Downscale and Interalce&quot; to convert it to 1080i50</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QComboBox" name="cbxFlipMode">
         <property name="minimumSize">
          <size>
           <width>170</width>
@@ -770,58 +872,22 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="5">
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>0</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="1" column="2">
-       <spacer name="horizontalSpacer_4">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Expanding</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>0</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="5" column="3">
-       <widget class="QLabel" name="lblAudioEnable">
+      <item row="5" column="0">
+       <widget class="QLabel" name="lblFlipMode">
         <property name="minimumSize">
          <size>
-          <width>80</width>
+          <width>140</width>
           <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>140</width>
+          <height>16777215</height>
          </size>
         </property>
         <property name="text">
-         <string>Audio</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="4">
-       <widget class="QComboBox" name="cbxSdi1Downscaler">
-        <property name="minimumSize">
-         <size>
-          <width>170</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Use &quot;Downscale&quot; to convert e.g. 2160p50 to 1080p50, use &quot;Downscale and Interalce&quot; to convert it to 1080i50</string>
+         <string>Flip</string>
         </property>
        </widget>
       </item>
@@ -832,56 +898,26 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="3">
-       <widget class="QLabel" name="lblSdi2Downscaler">
-        <property name="text">
-         <string>SDI 2 Downscaler</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="4">
-       <widget class="QComboBox" name="cbxSdi2Downscaler">
+      <item row="1" column="0">
+       <widget class="QLabel" name="lblVideoMode">
         <property name="minimumSize">
          <size>
-          <width>170</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
-       </widget>
-      </item>
-      <item row="5" column="4">
-       <widget class="QCheckBox" name="cbxAudioEnable">
-        <property name="minimumSize">
+        <property name="maximumSize">
          <size>
-          <width>170</width>
-          <height>0</height>
+          <width>140</width>
+          <height>16777215</height>
          </size>
         </property>
-        <property name="toolTip">
-         <string>Enable to embed audio from the internal microphine in the SDI signal</string>
-        </property>
         <property name="text">
-         <string/>
+         <string>Video Mode</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="4">
-       <widget class="QCheckBox" name="cbxTestPattern">
-        <property name="minimumSize">
-         <size>
-          <width>170</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Enable to show a Color Chart when no Input is detected</string>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="3">
+      <item row="10" column="3">
        <widget class="QLabel" name="lblTestPattern">
         <property name="minimumSize">
          <size>
@@ -900,21 +936,8 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="lblLogEnable">
-        <property name="minimumSize">
-         <size>
-          <width>170</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="text">
-         <string>LOG</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="1">
-       <widget class="QCheckBox" name="cbxLogEnable">
+      <item row="10" column="4">
+       <widget class="QCheckBox" name="cbxTestPattern">
         <property name="minimumSize">
          <size>
           <width>170</width>
@@ -922,10 +945,48 @@
          </size>
         </property>
         <property name="toolTip">
-         <string>Use a LOG Gamma Curve to preserve more Highlights</string>
+         <string>Enable to show a Color Chart when no Input is detected</string>
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="4">
+       <widget class="QSpinBox" name="sbxPQMaxBrightness">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>170</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="suffix">
+         <string> %</string>
+        </property>
+        <property name="maximum">
+         <number>100</number>
+        </property>
+        <property name="value">
+         <number>50</number>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="3">
+       <widget class="QLabel" name="lblPQMaxBrightness">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>140</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>PQ max Brightness</string>
         </property>
        </widget>
       </item>
